# MutualFunds-Prospectus-Analyser

./: README.md  pyproject.toml
config/: config.py
prompts/: chat_prompt.py  doc_val.py  page_sec_scan.py  rerank.py  sec_consolidation.py
